# station72

./: .env  README.md  Station72.session.sql  ds9_fonctions_externes.py  ds9_homeassistant.py  ds9_ia.py  ds9_tts.py  env.example  jouer.py  main.py  pyproject.toml
static/: style.css
static/jeux/horizon/: horizon.css  horizon.py  style.css
static/jeux/horizon/html/: audiobb.php  include.html
templates/: add_enigme.html  add_jeu.html  add_page.html  add_pnj.html  add_transition.html  erreur.html  index.html  play_page.html  pnj_index.html
