[project]
name = "station72"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "psycopg2>=2.9.10",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
